--- a/style.css
+++ b/style.css
@@ -1,115 +1,126 @@
-.div-container1 {
+body {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
+nav {
     display: flex;
     justify-content: space-around;
-    box-shadow: 5px 6px 3px;
+    align-items: center;
+    box-shadow: 5px 6px 3px #888888;
+    width: 100%;
+    height: 100%;
 }
+
+.log-btn {
+    width: 65px;
+    height: 30px;
+}
+/* -------------------container---------------- */
 
 .addbook-buton-div {
     display: flex;
     justify-content: center;
-    padding: 4%;
+    padding-top: 25px;
 }
-
 .addbook-buton {
-    font-size: 1.7em;
+    font-size: 24px;
+    box-shadow: 4px 5px 6px #888888;
 }
-
-.log-btn {
-    height: 40px;
-    width: 5%;
-    margin-top: 1%;
+.addbook-buton:hover {
+    cursor: pointer;
+    transform: scale(1.2);
+    font-weight: 400;
 }
-
-.submit-button {
-    padding-left: 60px;
-    padding-right: 60px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    background-color: rgb(19, 231, 19);
-    font-size: 1em;
-    margin-left: 3%;
-    font-weight: bold;
-}
-
-.form-div {
-    display: flex;
-    justify-content: center;
-    font-size: larger;
-    font-weight: bold;
-}
-#fname{
-    width: 7%;
-    height: 20px;
-}
-
-.form-divcontainer {
-    background-color: aqua;
-    width:350px;
-    height: 350px;
-    position: fixed;
-    text-align: center;
-    visibility: hidden;
-    border: 2px solid black;
-    left: 40%;
-}
-
-
 .card-div {
     display: flex;
     width: 100%;
     height: 100%;
-    gap: 0.9%;
+    gap: 10px;
     visibility: hidden;
     position: absolute;
 }
+/* #frame {
+    width: 7%;
+    height: 20px;
+} */
+.form-card {
+    background-color: rgb(204, 255, 229);
+    width: 350px;
+    height: 450px;
+    position: fixed;
+    text-align: center;
+    visibility: hidden;
+    border-radius: 10px;
+    box-shadow: 10px 5px 10px #888888;
+}
+
+.submit-button {
+    width: 120px;
+    padding: 5px;
+    margin: 0;
+    border-radius: 7px;
+    background-color: rgba(156, 7, 156, 0.897);
+    font-size: 1em;
+    font-weight: bold;
+}
+
+
+
 
 .notreadbtn {
     background-color: green;
     font-size: 1.5em;
-    margin-left: 3%;
+    /* margin-left: 3%; */
     display: block;
-    padding-left: 32%;
-    padding-right: 32%;
+    /* padding-left: 32%; */
+    /* padding-right: 32%; */
 }
 
 .removebtn {
     font-size: 1.5em;
-    margin-top: 5%;
+    /* margin-top: 5%;
     padding-left: 32%;
-    padding-right: 32%;
+    padding-right: 32%; */
 
 }
 
 .cards {
     width: 15%;
-    height: 30%;
+    height: 300px;
     background-color: pink;
     text-align: center;
     border: 1px solid black;
 }
-#title{
-    padding: 2%;
+
+#title {
+    /* padding: 2%; */
     border: 1px solid black;
     font-size: larger;
 }
-#author{
-    padding: 2%;
+
+#author {
+    /* padding: 2%; */
     border: 1px solid black;
     font-size: larger;
 
 }
-#page{
-    padding: 2%;
+
+#page {
+    /* padding: 2%; */
     border: 1px solid black;
     font-size: larger;
 }
+
+/* -----------------footer--------------------- */
 .footer {
-    min-height: 600px;
+    min-height: 700px;
     display: flex;
     justify-content: center;
     align-items: flex-end;
 }
 
 .footer-img {
-    width: 3%;
+    width: 60px;
 }
