--- a/style.css
+++ b/style.css
@@ -65,7 +65,11 @@ nav {
     font-size: 1em;
     font-weight: bold;
 }
-
+.submit-button:hover{
+    cursor: pointer;
+    transform: scale(1.3);
+    box-shadow: 4px 3px 5px #888888;
+}
 
 
 
